PreviewJob: consider file size for cache invalidation

BUG: 433127